--- a/opengl_abstractions/cargo.toml
+++ b/opengl_abstractions/cargo.toml
@@ -10,3 +10,4 @@ gl_generator = "0.14"
 
 [dependencies]
 matrices = {path = "../matrices"}
+rust-embed = { version = "8.7.2", default-features = false }
