--- a/render_context/cargo.toml
+++ b/render_context/cargo.toml
@@ -8,4 +8,4 @@ edition = "2024"
 opengl = {path = "../opengl_abstractions"}
 window = {path = "../window"}
 matrices = {path = "../matrices"}
-shaders = {path = "../shaders"}
+#shaders = {path = "../shaders"}
