--- a/render_context/cargo.toml
+++ b/render_context/cargo.toml
@@ -2,10 +2,13 @@
 name = "render_context"
 version = "0.8.0"
 edition = "2024"
+build = "build.rs"
+
 
 
 [dependencies]
+glfw = { version = "0.60", default-features = false, features = ["prebuilt-libs", "raw-window-handle-v0-6"]}
 opengl = {path = "../opengl_abstractions"}
-window = {path = "../window"}
+#window = {path = "../window"}
 matrices = {path = "../matrices"}
 #shaders = {path = "../shaders"}
