moved matrices to numeracy repository, some stuff may be broken due to minor refactoring of matrices and opengl_abstractions

--- a/opengl_abstractions/cargo.toml
+++ b/opengl_abstractions/cargo.toml
@@ -9,4 +9,5 @@ build = "build.rs"
 gl_generator = "0.14"
 
 [dependencies]
-matrices = {path = "../matrices"}
+numeracy = {git = "https://github.com/TheBookwyrms/numeracy.git"}
+#matrices = {path = "../matrices"}
