--- a/render_context/cargo.toml
+++ b/render_context/cargo.toml
@@ -9,4 +9,4 @@ build = "build.rs"
 [dependencies]
 glfw = { version = "0.60", default-features = false, features = ["prebuilt-libs", "raw-window-handle-v0-6"]}
 opengl = {path = "../opengl_abstractions"}
-matrices = {path = "../matrices"}
+numeracy = {git = "https://github.com/TheBookwyrms/numeracy.git"}
